--- a/admin-home.html
+++ b/admin-home.html
@@ -25,13 +25,17 @@
                 </div>
             </div>
             <div class="sidebar">
-                <a href="#" class="active"><span class="material-icons-sharp">receipt_long</span>
-                    <h3>Orders</h3>
+                <a href="#" class="active"><span class="material-icons-sharp">person_outline</span>
+                    <h3>Accueil</h3>
                 </a>
 
 
-                <a href="#"><span class="material-icons-sharp">person_outline</span>
-                    <h3>Sellers</h3>
+                <a href="./src/html/validate.html"><span class="material-icons-sharp">receipt_long</span>
+                    <h3>Valid Commandes</h3>
+                </a>
+
+                <a href="./src/html/validateP.html"><span class="material-icons-sharp">done</span>
+                    <h3>Valid Products</h3>
                 </a>
 
 
@@ -43,9 +47,9 @@
                     <h3>Add sub Catégory</h3>
                 </a>
 
-                <a href="./src/html/validate.html"><span class="material-icons-sharp">add</span>
+                <!-- <a href="./src/html/validate.html"><span class="material-icons-sharp">add</span>
                     <h3>valid commande</h3>
-                </a>
+                </a> -->
 
 
 
@@ -55,30 +59,30 @@
 
 
 
-                <a href="#"><span class="material-icons-sharp">report</span>
+                <a style="display: none;" href="#"><span class="material-icons-sharp">report</span>
                     <h3>Reports</h3>
                 </a>
 
 
-                <a href="#"><span class="material-icons-sharp">settings</span>
+                <!-- <a href="#"><span class="material-icons-sharp">settings</span>
                     <h3>Settings</h3>
-                </a>
+                </a> -->
 
 
 
 
-                <a href="#"><span class="material-icons-sharp">logout</span>
+                <!-- <a href="#"><span class="material-icons-sharp">logout</span>
                     <h3>Logout</h3>
-                </a>
+                </a> -->
             </div>
         </aside>
 
         <!----------------------- MAIN SECTION ----------- -->
         <main>
-            <h1>Get Control !</h1>
-            <div class="date">
+            <h1>Hello!</h1>
+            <!-- <div class="date">
                 <input type="date">
-            </div>
+            </div> -->
             <!-------------------- INSIGHTS------------- -->
 
 
@@ -97,8 +101,33 @@
                 <!-------------- END OF INSIGHTS  --------------->
             </div>
             <div class="recent-orders">
-                <h2>Recent Orders</h2>
-                <table>
+                <h2>Get control now!</h2>
+                <!-- <div class="container" id="select-choice">
+                    <div id="choice-1">
+
+                        <table class="product-table">
+                            <thead id="table-head-content">
+
+                            </thead>
+                            <tbody id="table-content-js">
+
+
+
+                            </tbody>
+                        </table>
+                    </div>
+                    <div id="choice-2">
+                        <div class="section2">
+
+                            <div class="container" id="product-container-dash">
+
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+                <!-- <table>
                     <thead>
                         <tr>
                             <th>Product Name</th>
@@ -172,8 +201,8 @@
                             <td class="primary">Details</td>
                         </tr>
                     </tbody>
-                </table>
-                <a href="#">Show All</a>
+                </table> -->
+                <!-- <a href="#">Show All</a> -->
             </div>
         </main>
         <!------------------ END OF MAIN  ---------->
