--- a/src/html/product-val.html
+++ b/src/html/product-val.html
@@ -128,12 +128,12 @@
       </button>
       <div id="confirmationPopup">
         <div class="popupContent">
-          <p>Are you sure you want to delete this product?</p>
+          <p>Are you sure you want to valid this product?</p>
           <button id="confirmYes">Yes</button>
           <button id="confirmNo">No</button>
         </div>
       </div>
-      <button class="frame-delet" id="delet">
+      <button class="frame-delet" id="valid">
         <img class="edit-2-icon" alt="" src="../../public/bin1@3x.png" />
       </button>
       <!-- <button class="frame-promotion">
@@ -141,7 +141,7 @@
           <img class="edit-3-icon" alt="" src="../../public/promotion1@3x.png" />
         </a>
       </button> -->
-      <div class="nb-avis" id="nbavis">(nb-avis)</div>
+      <!-- <div class="nb-avis" id="nbavis">(nb-avis)</div> -->
       <div class="cont-img">
         <div class="carousel">
           <div class="main-image">
@@ -167,7 +167,7 @@
       <!-- <div class="product-name" id="titrew">Product-name</div> -->
       <!-- <div class="mark-mark-name">Mark : <span id="mark">mark-name</span></div> -->
       <b class="price-da" id="price">Price DA</b>
-      <div class="share-this-product">Share this product</div>
+      <!-- <div class="share-this-product">Share this product</div> -->
       <div class="color-disponible">Color disponible
         <table id="couleursTable1" class="color1">
           <tr>
@@ -223,33 +223,34 @@
       <div class="frame-item"></div>
       <div class="frame-inner"></div>
       <div class="line-div"></div>
-      <div class="frame-child1"></div>
+      <!-- <div class="frame-child1"></div> -->
       <div class="frame-twitter">
         <button class="twitter-1">
           <a>
-            <img src="../../public/twitter1@3x.png" id="shareButton" class="twitter-1">
+            <!-- <img src="../../public/twitter1@3x.png" id="shareButton" class="twitter-1"> -->
           </a>
         </button>
       </div>
       <div class="frame-fcb">
         <button class="facebook-1">
           <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fparse.com">
-            <img src="../../public/facebook1@3x.png" class="facebook-1">
+            <!-- <img src="../../public/facebook1@3x.png" class="facebook-1"> -->
           </a>
         </button>
       </div>
       <div class="frame-insta">
         <button class="instagram-1">
           <a>
-            <img src="../../public/instagram1@3x.png" id="shareButton1" class="instagram-1">
+            <!-- <img src="../../public/instagram1@3x.png" id="shareButton1" class="instagram-1"> -->
           </a>
         </button>
       </div>
       <div class="frame-copy-link">
         <div class="group-copy-link">
-          <input class="group-copy-link-child" id="linkInput" readonly></input>
-          <button class="group-copy-link-item" id="copyButton"></button>
-          <label class="copy-link" for="copyButton">Copy link</label>
+          <input class="group-copy-link-child" style="display: none
+          ;" id="linkInput" readonly></input>
+          <button class="group-copy-link-item" style="display: none;" id="copyButton"></button>
+          <!-- <label class="copy-link" for="copyButton">Copy link</label> -->
         </div>
       </div>
       <div class="frame-worning">
@@ -291,37 +292,7 @@
 
       <!-- <img class="frame-child13" alt="" src="../../public/ellipse-105.svg" /> -->
     </div>
-    <div class="wrapper">
-      <div class="div1">
-        <div class="child"></div>
-        <div class="item"></div>
-        <a href="#frame-fiche-tech1">
-          <div class="frame-fiche-tech">
-            <button class="fiche-technique">Fiche technique</button>
-            <div class="frame-fiche-tech-icon">
-              <button class="menu-1-1"></button>
-            </div>
-          </div>
-        </a>
-        <a href="#container">
-          <div class="frame-descreption">
-            <button class="description">Description</button>
-            <button class="list-1"></button>
-            <div class="frame-describ-icon">
-              <button class="list-2"></button>
-            </div>
-          </div>
-        </a>
-        <a href="#frame-reviews1">
-          <div class="frame-reviews">
-            <div class="frame-reviews-icon">
-              <button class="positive-review-1"></button>
-            </div>
-            <button class="reviews">Reviews</button>
-          </div>
-        </a>
-      </div>
-    </div>
+
     <div class="container" id="container">
       <div class="div2">
         <div class="inner" id="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quod odio
@@ -330,7 +301,7 @@
         <div class="description1">Description</div>
       </div>
     </div>
-    <div class="frame-fiche-tech1" id="frame-fiche-tech1">
+    <!-- <div class="frame-fiche-tech1" id="frame-fiche-tech1">
       <div class="frame-fiche-tech-child"></div>
       <div class="fiche-technique1">Fiche technique</div>
       <table class="tableau">
@@ -351,8 +322,8 @@
           <td id="poids">5kg</td>
         </tr>
       </table>
-    </div>
-    <div class="frame-reviews1" - id="frame-reviews1">
+    </div> -->
+    <!-- <div class="frame-reviews1" - id="frame-reviews1">
 
       <div class="frame-reviews-child"></div>
       <div class="reviews1">Reviews</div>
@@ -367,21 +338,11 @@
           <b id="moyrev">3.6</b>
           <span class="span">/5</span>
         </div>
-        <!-- <img class="stars-icon4" alt="" src="../../public/stars3.svg" /> -->
         <div class="stars-icon4" id="reviewContainer"></div>
         <div class="reviews2"><span id="nb-reviews">12</span> Reviews</div>
       </div>
-      <!-- <div class="frame-show-more">
-        <div class="show-more">
-          <a href="../html/guest.html" id="show-more">
-            <button class="show-more1">show-more
-            </button>
-          </a>
-          <img class="show-more-child" alt="" src="../../public/line-36.svg" />
-          <img class="show-more-item" alt="" src="../../public/line-37.svg" />
-        </div>
-      </div> -->
-    </div>
+   
+    </div> -->
   </div>
 
   <br><br><br>
@@ -390,66 +351,15 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <script>
-    var ab = localStorage.getItem('sellertoken')
+    var ab = localStorage.getItem('admintoken')
 
     console.log(ab)
     // console.log(localStorage.getItem("productIdSeller"));
 
   </script>
   <script>
-    axios.get('https://buy-it-sigma.herokuapp.com/api/v1/products', {
-      headers: {
-        Authorization: 'Bearer ' + token,
-      },
-    }).then((response) => {
-      console.log(response.data.data)
-    })
-      .catch((error) => {
-        console.error('Erreur lors de la suppression du produit:', error);
-      });
 
 
-    // copy link
-    var copyButton = document.getElementById('copyButton');
-    var linkInput = document.getElementById('linkInput');
-
-    copyButton.addEventListener('click', function () {
-      // Get the URL of the current page
-      var currentUrl = window.location.href;
-
-      // Copy the URL to the clipboard
-      navigator.clipboard.writeText(currentUrl).then(function () {
-        // Write the URL to the input field
-        linkInput.value = currentUrl;
-        alert('Link copied!');
-      }).catch(function (err) {
-        console.error('Failed to copy link: ', err);
-      });
-    });
-
-
-    // pop up
-    var delet = document.getElementById('delet');
-    var confirmationPopup = document.getElementById('confirmationPopup');
-    var confirmYes = document.getElementById('confirmYes');
-    var confirmNo = document.getElementById('confirmNo');
-
-    delet.addEventListener('click', function () {
-      confirmationPopup.style.display = 'block';
-    });
-
-    confirmYes.addEventListener('click', function () {
-      // Code to execute when "Yes" is clicked
-      confirmationPopup.style.display = 'produit suprimé';
-      deleteProduct(productid);
-    });
-
-    confirmNo.addEventListener('click', function () {
-      // Code to execute when "No" is clicked
-      confirmationPopup.style.display = 'none';
-    });
-
-    // variables
 
 
     let titre = document.getElementById('titre');
@@ -492,60 +402,52 @@
 
 
     //share tweet 
-    // Fonction pour récupérer le lien de la page
-    function getLink() {
-      return window.location.href;
-    }
-
-    // Fonction pour gérer le clic sur le bouton
-    function shareOnTwitter() {
-      // Récupérer le lien de la page
-      var link = getLink();
-
-      // Créer l'URL de la page de publication de Twitter avec le lien en tant que texte du tweet
-      var tweetUrl = "https://twitter.com/intent/tweet?text=" + encodeURIComponent(link);
-
-      // Rediriger l'utilisateur vers la page de publication de Twitter
-      window.location.href = tweetUrl;
-    }
-
-    // Attacher l'événement de clic au bouton
-    var shareButton = document.getElementById("shareButton");
-    shareButton.addEventListener("click", shareOnTwitter);
-
-    //share insta 
-    <!-- Bouton dans votre site web -->
-
-    // Fonction pour récupérer le lien de la page
-    function getLink() {
-      return window.location.href;
-    }
-
-    // Fonction pour gérer le clic sur le bouton
-    function shareOnInstagram() {
-      // Récupérer le lien de la page
-      var link = getLink();
-
-      // Créer le texte de la légende pour la publication Instagram
-      var captionText = "Vérifiez ce lien : " + link;
-
-      // Pré-remplir la légende dans Instagram
-      var instagramUrl = "https://www.instagram.com/?url=" + encodeURIComponent(captionText);
-
-      // Rediriger l'utilisateur vers Instagram
-      window.location.href = instagramUrl;
-    }
-
-    // Attacher l'événement de clic au bouton
-    var shareButton = document.getElementById("shareButton1");
-    shareButton.addEventListener("click", shareOnInstagram);
 
     var token = localStorage.getItem('token')
     //id
     // let productid = "647a34d9d1deece3c633b352"
     let productid = localStorage.getItem('productIdSeller')
 
+    // pop up
+    var valid = document.getElementById('valid');
+    var confirmationPopup = document.getElementById('confirmationPopup');
+    var confirmYes = document.getElementById('confirmYes');
+    var confirmNo = document.getElementById('confirmNo');
+    var productId; // Remplacez par l'ID réel du produit à valider
 
+    valid.addEventListener('click', function () {
+      confirmationPopup.style.display = 'block';
+    });
+
+
+    confirmNo.addEventListener('click', function () {
+      // Code à exécuter lorsque l'utilisateur clique sur "No"
+      confirmationPopup.style.display = 'none';
+    });
+
+    // Récupérer l'ID du produit courant
+    confirmYes.addEventListener('click', function () {
+      // Code à exécuter lorsque l'utilisateur clique sur "Yes"
+      confirmationPopup.style.display = 'none';
+      var ab = localStorage.getItem('admintoken')
+
+      console.log(ab)
+      let productid = localStorage.getItem('productIdSeller')
+
+      axios.patch(`https://buy-it-sigma.herokuapp.com/api/v1/products/verify/${productid}`, {}, {
+        headers: {
+          Authorization: 'Bearer ' + ab,
+          'Content-Type': 'multipart/form-data',
+        },
+      })
+        .then(function (response) {
+
+          console.log('Produit validé avec succès');
+        })
+        .catch(function (error) {
+          console.error('Erreur lors de la validation du produit :', error);
+        });
+    });
     axios.get('https://buy-it-sigma.herokuapp.com/api/v1/products/' + productid, {
       headers: {
         Authorization: 'Bearer ' + token,
@@ -562,57 +464,10 @@
         proddispo.textContent = a.quantity
         description.textContent = a.description
         nbstock.textContent = a.quantity
-        typepr.textContent = a.category.name
+        // typepr.textContent = a.category.name
         typeliv.textContent = a.delivery.name
         // mark.textContent = a.category
         reduction.textContent = (((a.price - a.priceAfterDiscount) * 100) / a.price).toFixed(2)
-
-        //options 
-        // Récupérer la ligne des options
-        //review
-
-        //reviewnb
-
-        //nb-review
-        nbreviews.textContent = a.totalRating
-        nbavis.textContent = a.totalRating + " avis"
-        moyrev.textContent = a.ratingAverage
-        var nbReview = a.ratingAverage;
-
-        var reviewContainer = document.getElementById('reviewContainer');
-
-        function generateStarRating(ratingAverage) {
-          var starRatingElement = document.createElement('div');
-          starRatingElement.className = 'star-rating';
-
-          for (var i = 1; i <= 5; i++) {
-            var starSpan = document.createElement('span');
-            starSpan.className = 'star';
-
-            if (i <= ratingAverage) {
-              starSpan.textContent = '★'; // Étoile pleine (caractère Unicode)
-            } else if (i - 0.5 === ratingAverage) {
-              starSpan.textContent = '★'; // Étoile pleine (caractère Unicode)
-              starSpan.style.setProperty('clip-path', 'polygon(0 0, 50% 0, 50% 100%, 0 100%)'); // Clip le contenu pour afficher la moitié de l'étoile
-            } else {
-              starSpan.style.visibility = 'hidden'; // Étoile vide (masquée)
-            }
-
-            starRatingElement.appendChild(starSpan);
-          }
-
-          return starRatingElement.innerHTML;
-        }
-
-        var reviewElement = document.createElement('div');
-        reviewElement.className = 'review';
-
-        var ratingElement = document.createElement('div');
-        ratingElement.className = 'rating';
-        ratingElement.innerHTML = generateStarRating(nbReview);
-
-        reviewElement.appendChild(ratingElement);
-        reviewContainer.appendChild(reviewElement);
 
 
         var options = [];
@@ -641,12 +496,7 @@
             }
           }
         }
-        // a.imageCover,
-        //  a.images[0],
-        //  a.images[0],
-        //  a.images[0],
-        //  a.images[0],
-        //color 
+
         // Récupérer les lignes des couleurs pour chaque tableau
         var couleursRow1 = document.getElementById("couleursRow1");
         var couleursRow2 = document.getElementById("couleursRow2");
@@ -724,95 +574,6 @@
       .catch(function (error) {
         console.error('Error fetching categories:', error);
       });
-
-    // Fetch review data from the backend using Axios (replace with your actual endpoint)
-    axios.get('https://buy-it-sigma.herokuapp.com/api/v1/products/' + productid + '/reviews')
-      .then(function (response) {
-        let commentsData = response.data.data
-        console.log(commentsData)
-
-
-
-        var commentsContainer = document.getElementById('commentsContainer');
-
-        function generateStarRating(ratingAverage) {
-          var starRatingElement = document.createElement('div');
-          starRatingElement.className = 'star-rating';
-
-          for (var i = 1; i <= 5; i++) {
-            var starSpan = document.createElement('span');
-            starSpan.className = 'star';
-
-            if (i <= ratingAverage) {
-              starSpan.textContent = '★'; // Étoile pleine (caractère Unicode)
-            } else if (i - 0.5 === ratingAverage) {
-              starSpan.textContent = '★'; // Étoile pleine (caractère Unicode)
-              starSpan.style.setProperty('clip-path', 'polygon(0 0, 50% 0, 50% 100%, 0 100%)'); // Clip le contenu pour afficher la moitié de l'étoile
-            } else {
-              starSpan.style.visibility = 'hidden'; // Étoile vide (masquée)
-            }
-
-            starRatingElement.appendChild(starSpan);
-          }
-
-          return starRatingElement.innerHTML;
-        }
-
-        // Génération et remplissage des commentaires
-        for (var i = 0; i < commentsData.length; i++) {
-          var comment = commentsData[i];
-
-          var commentElement = document.createElement('div');
-          commentElement.className = 'comment';
-
-          var authorElement = document.createElement('div');
-          authorElement.className = 'author';
-          authorElement.textContent = comment.users.name;
-
-          var contentElement = document.createElement('div');
-          contentElement.className = 'content';
-          contentElement.textContent = comment.description;
-
-          var ratingElement = document.createElement('div');
-          ratingElement.className = 'rating';
-          ratingElement.innerHTML = generateStarRating(comment.rating);
-
-          var dateElement = document.createElement('div');
-          dateElement.className = 'date';
-          dateElement.textContent = 'Date : ' + comment.createdAt;
-
-          commentElement.appendChild(authorElement);
-          commentElement.appendChild(contentElement);
-          commentElement.appendChild(ratingElement);
-          // commentElement.appendChild(dateElement);
-          commentsContainer.appendChild(commentElement);
-        }
-
-        nbcomment.textContent = commentsData.length;
-
-
-        // Call a function to populate the reviews with the retrieved data
-      })
-      .catch(function (error) {
-        console.error('Failed to fetch reviews: ', error);
-      });
-
-    function deleteProduct(productid) {
-      axios
-        .delete(`https://buy-it-sigma.herokuapp.com/api/v1/products/${productid}`, {
-          headers: {
-            Authorization: 'Bearer ' + ab,
-          },
-        })
-        .then((response) => {
-          // Produit supprimé avec succès, afficher le message et rediriger
-          alert('Produit supprimé');
-          window.location.href = './dash_product.html'; // Redirection vers la page guest.html
-        })
-        .catch((error) => {
-          console.error('Erreur lors de la suppression du produit:', error);
-        });
-    }
 
 
 
