--- a/src/html/add-product.html
+++ b/src/html/add-product.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 <head>
     <!-- Required meta tags-->
@@ -38,8 +39,18 @@
             font-family: "Poppins", "Arial", "Helvetica Neue", sans-serif;
         }
 
+        .tali {
+            font-size: 18px;
+            position: relative;
+            right: 35px;
+            top: -25px;
+        }
 
-
+        a {
+            text-decoration: none;
+            color: inherit;
+            cursor: pointer;
+        }
 
 
         html {
@@ -277,7 +288,6 @@
             font-family: "Poppins", "Arial", "Helvetica Neue", sans-serif;
 
         }
-       
     </style>
 </head>
 
@@ -286,6 +296,9 @@
         <div class="main main--w680">
             <div class="card card-4">
                 <div class="card-body">
+                    <a href="./dash-1.html" class="tali" onclick="history.back();">
+                        <i class="fas fa-arrow-left"></i> Retour
+                    </a>
                     <h2 class="title">Add Product Page</h2>
                     <form method="POST" action="# " id="myform">
                         <!-- <div class="row row-space">
@@ -424,7 +437,7 @@
                                 <div class="input-group">
                                     <label for="categorySelect" class="label">Catégorie</label>
                                     <div class="rs-select2 js-select-simple select--no-search">
-                                        <select name="Catégorie" id="categorySelect" required>
+                                        <select name="Catégorie" id="categorySelect" onchange="choisir()" required>
                                             <option disabled="disabled" selected="selected">Choose option</option>
                                         </select>
                                         <div class="select-dropdown"></div>
@@ -600,9 +613,11 @@
                         </div> -->
 
                         <div id="colorContainer" class="form-group1">
-                            <label>Couleurs disponibles:</label><div></div>
-                            <input type="color" class="colorInput" /><div></div>
-                        
+                            <label>Couleurs disponibles:</label>
+                            <div></div>
+                            <input type="color" class="colorInput" />
+                            <div></div>
+
                             <button type="button" id="addColorButton">+</button>
                         </div>
 
@@ -777,11 +792,9 @@
     let catégorie = document.getElementById('categorySelect');
     let subcatégorie = document.getElementById('SubcategorySelect');
     let Deliverycatégorie = document.getElementById('DeliverySelect');
-    // let livraison = document.getElementById('TypeLivraisonSelect');
     let price = document.getElementById('price');
     let pricered = document.getElementById('pricered');
     let quantity = document.getElementById('quantity');
-    // let color = document.getElementById('color');
     let quantité = document.getElementById('quantité');
     let taille = document.getElementById('taille');
     let description = document.getElementById('description');
@@ -799,52 +812,67 @@
         }
     })
         .then(function (response) {
-
             var categories = response.data;
             // console.log(categories)
-            var categorySelect = document.getElementById("categorySelect");
-            var a = response.data;
+            var categorySelect = document.getElementById('categorySelect');
+            var categoriesData = response.data.data;
 
-            for (var i = 0; i < a.data.length; i++) {
-                var catename = a.data[i].name;
-                var cateid = a.data[i]._id;
+            for (var i = 0; i < categoriesData.length; i++) {
+                var category = categoriesData[i];
+                var categoryId = category._id;
+                // console.log(categoryId)
+                var categoryName = category.name;
 
-                var option = document.createElement("option");
-                option.value = cateid;
-                option.text = catename;
-                option.class = cateid;
+                var option = document.createElement('option');
+                option.value = categoryId;
+                option.text = categoryName;
                 categorySelect.appendChild(option);
             }
         })
-        .catch(error => {
-            console.error('Erreur lors de la récupération des produits:', error);
+        .catch(function (error) {
+            console.error('Erreur lors de la récupération des catégories:', error);
         });
-    // axios.get('https://buy-it-sigma.herokuapp.com/api/v1/categories/' + cateid + '/subcategories', {
-    axios.get('https://buy-it-sigma.herokuapp.com/api/v1/subcategories', {
-        headers: {
-            Authorization: 'Bearer ' + a,
-        }
-    })
-        .then(function (response) {
+    function choisir() {
+        var categoryId = document.getElementById('categorySelect').value;
+        console.log(categoryId)
+        fetchSubcategories(categoryId)
 
-            var subcategories = response.data;
-            var SubcategorySelect = document.getElementById("SubcategorySelect");
-            var b = response.data;
+    }
 
-            for (var i = 0; i < b.data.length; i++) {
-                var scatename = b.data[i].name;
-                var scateid = b.data[i]._id;
+    function fetchSubcategories(categoryId) {
+        var subcategorySelect = document.getElementById('SubcategorySelect');
+        subcategorySelect.innerHTML = ''; // Clear previous options
 
-                var soption = document.createElement("option");
-                soption.value = scateid;
-                soption.text = scatename;
-                soption.class = scateid;
-                SubcategorySelect.appendChild(soption);
-            }
-        })
-        .catch(error => {
-            console.error('Erreur lors de la récupération des produits:', error);
-        });
+        axios
+            .get(`https://buy-it-sigma.herokuapp.com/api/v1/categories/${categoryId}/subcategories`, {
+                headers: {
+                    Authorization: 'Bearer ' + a,
+                },
+            })
+            .then(function (response) {
+                var subcategoriesData = response.data.data; // Access the 'data' property
+                console.log(subcategoriesData);
+
+                if (Array.isArray(subcategoriesData)) {
+                    subcategoriesData.forEach(function (subcategory) {
+                        var subcategoryId = subcategory._id;
+                        var subcategoryName = subcategory.name;
+
+                        var option = document.createElement('option');
+                        option.value = subcategoryId;
+                        option.text = subcategoryName;
+                        subcategorySelect.appendChild(option);
+                    });
+                } else {
+                    console.error('Invalid subcategories data:', subcategoriesData);
+                }
+            })
+            .catch(function (error) {
+                console.error('Erreur lors de la récupération des sous-catégories:', error);
+            });
+    }
+
+
 
     axios.get('https://buy-it-sigma.herokuapp.com/api/v1/deliveries', {
         headers: {
@@ -872,63 +900,6 @@
         .catch(error => {
             console.error('Erreur lors de la récupération des produits:', error);
         });
-    // axios.get('https://buy-it-sigma.herokuapp.com/api/v1/subcategories', {
-    //     headers: {
-    //         Authorization: 'Bearer ' + a,
-    //     }
-    // })
-    //     .then(function (response) {
-
-    //         var subcategories = response.data;
-    //         var SubcategorySelect = document.getElementById("TypeLivraisonSelect");
-    //         var b = response.data;
-
-    //         for (var i = 0; i < b.data.length; i++) {
-    //             var scatename = b.data[i].name;
-    //             var scateid = b.data[i]._id;
-
-    //             var soption = document.createElement("option");
-    //             soption.value = scateid;
-    //             soption.text = scatename;
-    //             soption.class = scateid;
-    //             SubcategorySelect.appendChild(soption);
-    //         }
-    //     })
-    //     .catch(error => {
-    //         console.error('Erreur lors de la récupération des produits:', error);
-    //     });
-
-    // axios.get('https://buy-it-sigma.herokuapp.com/api/v1/categories')
-    // .then(function (response) {
-    //     const a = response.data,
-    //     console.log(a)
-    //     var categories = response.data;
-    //     var categorySelect = document.getElementById("categorySelect");
-    //     var a = response.data;
-
-    //     for (var i = 0; i < a.data.length; i++) {
-    //         var catename = a.data[i].name;
-    //         var cateid = a.data[i]._id;
-
-    //         var option = document.createElement("option");
-    //         option.value = catename;
-    //         option.text = catename;
-    //         option.class = cateid;
-    //         categorySelect.appendChild(option);
-    //     }
-    // })
-    // .catch(function (error) {
-    //     console.error('Error fetching categories:', error);
-    // });
-    // axios.get('https://tiny-jade-reindeer-cape.cyclic.app/api/v1/products')
-    //   .then(response => {
-    //     let catégories = response.data 
-    //     catégorie.innerHTML = `<option>Subject 1</option>`
-    //   })
-    //   .catch(error => {
-    //     console.log(error)
-    //   });
-    //récupurer données 
 
 
     //add color
@@ -940,30 +911,7 @@
 
     submit.onclick = function () {
 
-        // if (cash.checked) {
-        //     tabchek = [cash.value];
-        // }
-        // if (amain.checked) {
-        //     tabchek = [amain.value];
-        // }
-        // if (baridi.checked) {
-        //     tabchek = [baridi.value];
-        // }
-        // if (cash.checked && amain.checked) {
-        //     tabchek = [cash.value, amain.value];
-        // }
-        // if (amain.checked && baridi.checked) {
-        //     tabchek = [amain.value, baridi.value];
-        // }
-        // if (cash.checked && baridi.checked) {
-        //     tabchek = [cash.value, baridi.value];
-        // }
-        // if (amain.checked && cash.checked && baridi.checked) {
-        //     tabchek = [cash.value, amain.value, baridi.value];
-        // }
-        // else if (amain.checked == false && cash.checked == false && baridi.checked == false) {
-        //     tabchek = ["pas de livraison"];
-        // }
+
         var fileInputs = document.querySelectorAll('input[type="file"]');
 
         var categoryImages = [];
@@ -978,47 +926,38 @@
         for (var i = 1; i < categoryImages.length; i++) {
             othermage.push(categoryImages[i]);
         }
+        console.log('photoooss')
+        console.log(othermage)
 
-        // const TypeLivraisonSelect = document.getElementById('TypeLivraisonSelect');
-        // const selectedValues = [];
-        // const options = TypeLivraisonSelect.options;
-        // for (let i = 0; i < options.length; i++) {
-        //     if (options[i].selected) {
-        //         selectedValues.push(options[i].value);
-        //     }
-        // }
-        // var categoryImages = [];
+        let formData = new FormData();
+        formData.append('title', title.value);
+        formData.append('imageCover', coverimage);
+        formData.append('category', catégorie.value);
+        formData.append('subcategory', subcatégorie.value);
+        formData.append('delivery', Deliverycatégorie.value);
+        formData.append('price', price.value);
+        formData.append('priceAfterDiscount', pricered.value);
+        formData.append('quantity', quantity.value);
+        formData.append('description', description.value);
 
-
-        class prod {
-            constructor(title, coverimage, othermage, catégorie, subcatégorie, Deliverycatégorie, price, pricered, quantity, description) {
-                this.title = title;
-                this.imageCover = coverimage;
-                this.images = othermage;
-                this.category = catégorie;
-                this.subcategory = subcatégorie;
-                this.delivery = Deliverycatégorie;
-                this.price = price;
-                this.priceAfterDiscount = pricered;
-                this.quantity = quantity;
-                // this.liv = selectedValues;
-                this.description = description;
-            }
+        for (let i = 0; i < othermage.length; i++) {
+            formData.append('images', othermage[i]);
         }
 
-        let product = new prod(
-            title.value,
-            coverimage,
-            othermage,
-            catégorie.value,
-            subcatégorie.value,
-            Deliverycatégorie.value,
-            price.value,
-            pricered.value,
-            quantity.value,
-            // selectedValues,
-            description.value,
-        );
+        axios.post('https://buy-it-sigma.herokuapp.com/api/v1/products', formData, {
+            headers: {
+                Authorization: 'Bearer ' + a,
+                'Content-Type': 'multipart/form-data',
+            },
+        })
+            .then(function (response) {
+                console.log('Product added successfully:', response.data);
+                displayPopup("Product added successfully");
+            })
+            .catch(function (error) {
+                console.error('Error adding Product:', error);
+                displayPopup("An error occurred");
+            });
 
         //xx
         let productTitle = document.getElementById("productTitle").value;
@@ -1092,24 +1031,7 @@
         // window.location.href = './add-color.html';
 
         //post 
-        axios.post('https://buy-it-sigma.herokuapp.com/api/v1/products', product, {
-            headers: {
-                Authorization: 'Bearer ' + a,
-                'Content-Type': 'multipart/form-data',
-            }
-        })
-            .then(function (response) {
-                console.log('Product added successfully:', response.data);
-                displayPopup("Product added successfully");
-                // document.getElementById("myform").reset();
-            })
-            .catch(function (error) {
-                // console.log(error.response)
-                console.error('Error adding Product:', error);
-                displayPopup("an error occured");
-                console.log(product.imageCover)
-                console.log(product.images[0])
-            });
+
 
 
         function displayPopup(message) {
