--- a/src/html/validate.html
+++ b/src/html/validate.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <!-- <link rel="stylesheet" href="../css/add-cat.css"> -->
 <link
   href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
@@ -10,6 +11,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
+    a {
+      text-decoration: none;
+    }
+
+    a:visited {
+      color: black;
+    }
+
+    .tali {
+      font-size: 18px;
+      position: relative;
+      right: 35px;
+      top: -25px;
+    }
+
     .circle-button {
       width: 30px;
       height: 30px;
@@ -225,7 +241,8 @@
     <div class="main main--w680">
       <div class="card card-4">
         <div class="card-body">
-
+          <a href="../../admin-home.html" class="tali" onclick="history.back();"> <i class="fas fa-arrow-left"></i>
+            Retour </a>
           <table>
             <caption>Liste des commandes</caption>
             <thead>
@@ -325,7 +342,7 @@
         function valideRow(row) {
           // Mettre à jour la commande avec axios.patch
           var orderId = row.dataset.orderId;
-          axios.patch(`https://buy-it-sigma.herokuapp.com/api/v1/orders/${orderId}/verified`, {
+          axios.patch(`https://buy-it-sigma.herokuapp.com/api/v1/orders/${orderId}/verified`, {}, {
             headers: {
               Authorization: 'Bearer ' + a,
               'Content-Type': 'multipart/form-data',
@@ -333,6 +350,7 @@
           })
             .then(function (response) {
               console.log('Commande mise à jour avec succès');
+
             })
             .catch(function (error) {
               console.error('Erreur lors de la mise à jour de la commande:', error);
