--- a/src/html/product-val.html
+++ b/src/html/product-val.html
@@ -123,7 +123,7 @@
       </div>
       <button style="display:none;" class="frame-edit">
         <a href="#">
-          <img class="edit-2-icon" alt="" src="../../public/edit-2@2x.png" />
+          <img style="display: none;" class="edit-2-icon" alt="" src="../../public/edit-2@2x.png" />
         </a>
       </button>
       <div id="confirmationPopup">
@@ -134,7 +134,7 @@
         </div>
       </div>
       <button class="frame-delet" id="valid">
-        <img class="edit-2-icon" alt="" src="../../public/bin1@3x.png" />
+        <img class="edit-2-icon" style="display: none;" alt="" src="../../public/bin1@3x.png" />
       </button>
       <!-- <button class="frame-promotion">
         <a href="#">
